--- a/navigation.html
+++ b/navigation.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body> 
-    <h1>Our Mental Health</h1>
-    <h2>Depression</h2> 
+<body> Our Mental Health
+    <h1>Depression</h1> 
     <a href="Depression.html">Depression</a>
     <a href="Symptoms.html">Symptoms</a>
     <a href="Mental_Health.html">Mental Health
         <a href="Contact.html">Contact</a>
         <a href="Mental_Disorders.html">Mental Disorders</a>
         <a href="Psychotherapies.html">Psychotherapies</a>
-        <a href="Treatment.html">Treatments
+        <a href="Treatments.html">Treatments
             <a href="Types.hmtl">Types</a>
             <a href=""></a>
         </a>
