--- a/symptoms.html
+++ b/symptoms.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>What is Mental Disorders </h1>
-</body>
+    <hi>Symptoms of Depression</hi>
+    
+</body> 
 </html>
