--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css"href="fonts.css">
+
 </head>
 <body> 
-    <h1>Our Mental Health</h1>
-    <h2>Depression</h2> 
+    <h1 style="color:rgb(2, 1, 1);"> Our Mental Health</h1>
+
     <a href="Depression.html">Depression</a>
     <a href="Symptoms.html">Symptoms</a>
     <a href="Mental_Health.html">Mental Health
@@ -18,7 +20,10 @@
         <a href="Treatment.html">Treatments
             <a href="Types.hmtl">Types</a>
             <a href=""></a>
-        </a>
-    </a>
+    
 </body> 
+<p style="font-size:150%;">In today's society mental health is taken as a joke, a tiktok video, a way to get clout. We have watched many people put on a facade for social media  everyday when deep down they are hurt, sad, in pain and finding it hard to express how they genuinly feel.Our mental health is a state of well-being in which the individual realizes his or her own abilities, can cope with the normal stress of life can work productiverly and fruitfully, and is able to make a contribution to his or her community.</p> 
+
+</p>
+<img src="https://cdn.pixabay.com/photo/2017/01/30/02/20/mental-health-2019924_1280.jpg" alt="mental health">
 </html>
