--- a/Depression.html
+++ b/Depression.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css"href="fonts.css">
+
 </head>
+
 <body>
-    <h1>Depression</h1>
+    <a href="Depression.html">Depression</a>
+    <a href="Symptoms.html">Symptoms</a>
+    <a href="Mental_Health.html">Mental Health
+        <a href="Contact.html">Contact</a>
+        <a href="Mental_Disorders.html">Mental Disorders</a>
+        <a href="Psychotherapies.html">Psychotherapies</a>
+        <a href="Treatment.html">Treatments
+            <a href="Types.hmtl">Types</a>
+    <h1 style="color:rgb(2, 1, 1);">Depression </h1>
 </body>
+<p style="font-size:140%;">Depression is more than just feeling sad.It drains your optisim,energy and drive. It can seem like there's no way out,but no matter how bad you feel there's always hope.Read on to learn about symptoms,treatment,and recovery. </p>
 </html>
