--- a/Contact.html
+++ b/Contact.html
@@ -7,4 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+<form>      <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname">
+    <input type="submit" value="Submit">
+
+    <br><p>Choose your disorder:</p>
+    <input type="radio" id="html name="depression" value="HTML"
+</form>
