--- a/Depression.html
+++ b/Depression.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css"href="fonts.css">
+    <link rel="stylesheet" type="text/css"href="style.css">
 
 </head>
 
@@ -19,6 +19,6 @@
         <a href="Treatment.html">Treatments
             <a href="Types.hmtl">Types</a>
     <h1 style="color:rgb(2, 1, 1);">Depression </h1>
+    <p style="font-size:140%;">Depression is more than just feeling sad.It drains your optisim,energy and drive. It can seem like there's no way out,but no matter how bad you feel there's always hope.Read on to learn about symptoms,treatment,and recovery. </p>
 </body>
-<p style="font-size:140%;">Depression is more than just feeling sad.It drains your optisim,energy and drive. It can seem like there's no way out,but no matter how bad you feel there's always hope.Read on to learn about symptoms,treatment,and recovery. </p>
 </html>
