--- a/Mental_Disorders.html
+++ b/Mental_Disorders.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css"href="fonts.css">
+    <link rel="stylesheet" type="text/css"href="style.css">
 </head>
 <body>
     <h1 style="color:rgb(2, 1, 1);">What are Mental Disorders</h1>
@@ -18,10 +18,10 @@
         <a href="Treatment.html">Treatments
             <a href="Types.hmtl">Types</a>
             <a href=""></a>
-    
+    <p style="font-size:150%;">Summary</p>
+    <div class="Box">
+    <p style="font-size:140%;">Mental illness also called mental disorder, refers to a wide range of mental health conditions- disorders that affects your mood,thinking and behavior.Examples of mental illness include depression, anxiety disorders, schizophrenia,eating disorders and addictive behaviors.A mental illness can make you miserable and can cause problems in your daily life, such as at school or work or in relatioships.In most cases, symptoms can be managed with a combination of medications and talk therapy (psychotherapy)</p>
+
+    <p style="font-size:140%;">Many people have mental health concerns from time to time.But a mental health concern becomes a mental illness when ongoing signs and symptoms cause frequent stress and affect your ability to function.</p>
+    </div>
 </body>
-<p style="font-size:130%;">Summary</p>
-
-<p style="font-size:140%;">Mental illness also called mental disorder, refers to a wide range of mental health conditions- disorders that affects your mood,thinking and behavior.Examples of mental illness include depression, anxiety disorders, schizophrenia,eating disorders and addictive behaviors.A mental illness can make you miserable and can cause problems in your daily life, such as at school or work or in relatioships.In most cases, symptoms can be managed with a combination of medications and talk therapy (psychotherapy)</p>
-
-<p style="font-size:140%;">Many people have mental health concerns from time to time.But a mental health concern becomes a mental illness when ongoing signs and symptoms cause frequent stress and affect your ability to function.</p>
