--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css"href="fonts.css">
+    <link rel="stylesheet" type="text/css"href="style.css">
     <style>
 
        
@@ -15,21 +15,23 @@
 
 </head>
 <body> 
-    <h1 style="color:rgb(2, 1, 1);"> Our Mental Health</h1>
 
-    <a href="Depression.html">Depression</a>
-    <a href="Symptoms.html">Symptoms</a>
-    <a href="Mental_Health.html">Mental Health
-        <a href="Contact.html">Contact</a>
-        <a href="Mental_Disorders.html">Mental Disorders</a>
-        <a href="Psychotherapies.html">Psychotherapies</a>
-        <a href="Treatment.html">Treatments
-            <a href="Types.hmtl">Types</a>
-            <a href=""></a>
+    <h1 style="color:rgb(2, 1, 1);"> Our Mental Health</h1>
+    <ul class=navlinks>
+   <li><a href="Depression.html">Depression &nbsp;</a></li>
+   <li><a href="Symptoms.html">Symptoms &nbsp;</a><li>
+    <li><a href="Mental_Health.html">Mental Health &nbsp;</a><li>
+    <li> <a href="Contact.html">Contact &nbsp;</a><li>
+     <li> <a href="Mental_Disorders.html">Mental Disorders &nbsp;</a><li>
+      <li> <a href="Psychotherapies.html">Psychotherapies &nbsp;</a><li>
+    <li><a href="Treatment.html">Treatments &nbsp;</a></li>
+    <li><a href="Types.hmtl">Types &nbsp;</a><li>
+    <li><a href=""></a><li>
+        </ul class=navlinks>
     
 </body> 
 <p style="font-size:140%;">In today's society mental health is taken as a joke, a tiktok video, a way to get clout. We have watched many people put on a facade for social media  everyday when deep down they are hurt, sad, in pain and finding it hard to express how they genuinly feel.Our mental health is a state of well-being in which the individual realizes his or her own abilities, can cope with the normal stress of life can work productiverly and fruitfully, and is able to make a contribution to his or her community.</p> 
 
 </p>
-<img src="https://cdn.pixabay.com/photo/2017/01/30/02/20/mental-health-2019924_1280.jpg" alt="mental health">
-</html>
+
+
