--- a/Depression.html
+++ b/Depression.html
@@ -19,6 +19,9 @@
         <a href="Treatment.html">Treatments
             <a href="Types.hmtl">Types</a>
     <h1 style="color:rgb(2, 1, 1);">Depression </h1>
-    <p style="font-size:140%;">Depression is more than just feeling sad.It drains your optisim,energy and drive. It can seem like there's no way out,but no matter how bad you feel there's always hope.Read on to learn about symptoms,treatment,and recovery. </p>
+    <p style="font-size:130%;">Depression is more than just feeling sad.It drains your optisim,energy and drive. It can seem like there's no way out,but no matter how bad you feel there's always hope.Read on to learn about symptoms,treatment,and recovery. </p>
 </body>
+<p style="font-size:130%;">Depression affetcs an estimated one in 15 adults (6.7%) in any given year.And one in six people (16.6%) will experience depression at some time in their life. Depression can occur at any, time but on average, first appears during the late teens to mid-20s. Women are more likely than men to experience depression. Some studies show that one-third of women will experience a major depressive episode in their lifetime. There is a high degree of heritability (approximately 40%) when first-degree relatives (parents/children/siblings) have depression.</p>
+
+<h1 style="color:rgb(7, 34, 189);">Depression is Different From Sadness or Grief/Bereavement</h1>
 </html>
