--- a/index.html
+++ b/index.html
@@ -30,8 +30,31 @@
         </ul class=navlinks>
     
 </body> 
-<p style="font-size:140%;">In today's society mental health is taken as a joke, a tiktok video, a way to get clout. We have watched many people put on a facade for social media  everyday when deep down they are hurt, sad, in pain and finding it hard to express how they genuinly feel.Our mental health is a state of well-being in which the individual realizes his or her own abilities, can cope with the normal stress of life can work productiverly and fruitfully, and is able to make a contribution to his or her community.</p> 
-
-</p>
+<p style="font-size:130%;">In today's society mental health is taken as a joke, a tiktok video, a way to get clout. We have watched many people put on a facade for social media  everyday when deep down they are hurt, sad, in pain and finding it hard to express how they genuinly feel.Our mental health is a state of well-being in which the individual realizes his or her own abilities, can cope with the normal stress of life can work productiverly and fruitfully, and is able to make a contribution to his or her community.</p> 
 
 
+
+<h1 style="color:rgb(189, 7, 7);">Mental health Problems Affect Everyone</h1>
+
+<p style="font-size:140%;">Myth:Mental Health problems dont affect me.</p>
+
+<p style="font-size:130%;">Fact: Mental Health problems are actually very common. In 2020 about:</p>
+<li style="font-size:130%;">One in five American adults experienced a mentla health issue</li>
+<li style="font-size:130%;">One in 6 young people experienced a major depressive episode</li>
+<li style="font-size:130%;">One in 20 Americans lived with a serious mental illness, such as
+schizxophernia, bipolar disorder, or major depression</li>
+
+
+<p style="font-size:130%;">Suicide is a leading cause of death in the United States.In fact, it was the 2nd leading cause of death for people ages 10-24.It accounted for the loss
+of more than 45,979 Americans lives in 2020, nearly double the number of lives lost to homocide. </p>
+<hr>
+<p style="font-size:140%;">Myth:Children dont experience mental health problems</p>
+<p style="font-size:130%;">Fact:Even very young children may show early warning signs of mental hesalth concerns.These mental health problems are often clinically disagnosable, and can be a product of the interaction of biological,psychological and social factors.</p>
+
+<p style="font-size:130%;">Half of all mental health disorders show first signs before a person turns 14 years old, and three-quaters of mental health disorders begin before the age of 24 </p>
+
+<p style="font-size:130%;">Unfortunately, only half of children and adolescents with diagnosable mental health problems recieve the treatment they need. Early mental health support can help a child before problems interfere with other developmental needs.</p>
+<hr>
+
+<p style="font-size:140%;">Myth:People with mental health problems are violent and unpredictable</p>
+<p style="font-size:130%;">Fact: The vast majority of people with mental health problems are no more likely to be violent than anyone else. Most people with mental illness are not violent and only 3%-5% of violent acts can be attributed to individuals living with a serious mental illness. In fact,people with severe mental illness are over 10 times more likely to be victims of violent crime than the general population. You probably know someone with a mental health problem dont even realize it, because many people with mental health problems are highly active and productive members of our communities. </p>
