--- a/Treatments.html
+++ b/Treatments.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css"href="fonts.css">
+    <link rel="stylesheet" type="text/css"href="style.css">
 </head>
 <body>
-    <hi>Treatments for Depression </hi>
-    
+    <h1 style="color:rgb(2, 1, 1);">How Is Depression Treated?</h1>
+    <p style="font-size:130%;">Depression is among the most treatable of mental disorders.Between 805 and 90% percent of people with depression eventually respond well to treatment.Almost all patients gain some relief from their symptoms.</p>  
+
+
+     <p style="font-size:130%;">Before a diagnosis or treatment, health professional should conduct through diagnostic evaluation,including an interview and a physical examination.In some cases,a blood test might be done to make sure the depression is not due to a medical condition like a thyroid problem or a vitamin deficiency(reversing the medical cause would alleviate the depression-like symptoms.) The evaluation will identify specific symptoms and explore medical and family histories as well as cultural and environmental factors with the goal of arriving at a diagnosis and planning a course of action.</p>
+
+     <li style="font-size:130%;">Medication:Brain chemistry may contribute to an individual's depression and may factor into their treatment. For this reason, antidepressants might be prescribed to help modify one's brain chemistry.These medications are not sedatives,"uppers" or tranquilizers.They are not habit-forming. Generally  antidepressant medications have no stimulating effect on people not experiencing depression.</li> 
+     
+     <p style="font-size:130%;">Antidepressant may produce some improvement within the first week or two of use yet full benefits may not be seen for two to three months.If a patient feels little or no improvement after several weeks,his or her psychiatrist can alter the dose of the medication or add or substitute another antidepressant.In some situations other psychotropic medications may be helpful. It is important to let your doctor know if a medication does not work or if you experience side  effects.</p> 
+
+     <p style="font-size:130%;">Psychiatrists usually reccomend that patients continue to take medication for six or more months after the symptoms have improved.Longer-term maintenance treatmetn may be suggested to decrease the risk of future episodes for certain people at high risks.</p>
+
+     <li style="font-size:130%;">Psychotherapy:Psychotherapy, or "talk therapy",is sometimes used alone for treatment of mild depression; of moderate to severe depression,psychotherapy is often used along with antidepressant medications.Cognitive behavioral therapy (CBT) has been found to be effective in treating depression. CBT is a form of therapy focused on the problem solving in the present.CBT helps a person to recognize disorted/negative thinking witht the goal of changing thoughts and behaviors to respond to challanges in a more positive manner.</li>
+     <p style="font-size:130%;">Psychotherapy may involve ony the individual, but it can include others.For example, family or couples therapy can help address issue within these close relationships.</p>
 </body>
 </html>
