--- a/symptoms.html
+++ b/symptoms.html
@@ -30,12 +30,23 @@
     <li style="font-size:130%;">Loss of energy/increased faitgue</li>
     <li style="font-size:130%;">Increase of purposeless physical activity(e.g, inability to sit still,pacing,hand writitng)or slowed movements or speech(these actions must be severe enough to be observable by others) </li>
 
-    <p style="font-size:130%;">Not everyone who benefits from psychotherapy is diagnosed with a mentall illness.
-        Psychotherapy can help with a number of life's stresses and conflicts that can affect anyone. For example,it may help you: </p>
+<p style="font-size:130%;">Not everyone who benefits from psychotherapy is diagnosed with a mentall illness.
+    Psychotherapy can help with a number of life's stresses and conflicts that can affect anyone. For example,it may help you: </p>
         
-        <li style="font-size:130%;">Resolve conflicts with your partner or someone else in your life.</li>
-        <li style="font-size:130%;">Relieve anxiety or stress due to work or other situations</li>
-        <li style="font-size:130%;">Learn to manage unhealthy reactions, such as road rage or passive-aggressive.</li>
+    <li style="font-size:130%;">Resolve conflicts with your partner or someone else in your life.</li>
+    <li style="font-size:130%;">Relieve anxiety or stress due to work or other situations</li>
+    <li style="font-size:130%;">Learn to manage unhealthy reactions, such as road rage or passive-aggressive.</li>
+
+
+<p style="font-size:140%;">Risk Factors for Depression</p>
+<p style="font-size:130%;">Depression can affect anyone- even  a person who appears to live in relatively ideal circumstances</p>
+
+<p style="font-size:130%;">Several factors can play a role in depression:</p>
+<li style="font-size:130%;">Biochemistry: Difference in certain chemicals in the brain  may contribute to symptoms of depression.</li>
+<li style="font-size:130%;">Genectics:Depression can run in families.For example,if one identical twin has depression,the other has a 70% chance of having the illness sometime in life.</li>
+<li style="font-size:130%;">Personality:People with low self-esteem,who are easily overwhelmed by stress,or who are generally pessimistic appear to be more likely to experience depression</li>
+<li style="font-size:130%;">Environmental  factors: Continuous exposure to violence, neglect,abuse  or poverty may make some people more vulnerable to depression.</li>
+
         
 </body> 
 
