--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
     <ul class=navlinks>
    <li><a href="Depression.html">Depression &nbsp;</a></li>
    <li><a href="Symptoms.html">Symptoms &nbsp;</a><li>
-    <li><a href="Mental_Health.html">Mental Health &nbsp;</a><li>
+    <li><a href="Mental_Health.html">Our Mental Health &nbsp;</a><li>
     <li> <a href="Contact.html">Contact &nbsp;</a><li>
      <li> <a href="Mental_Disorders.html">Mental Disorders &nbsp;</a><li>
       <li> <a href="Psychotherapies.html">Psychotherapies &nbsp;</a><li>
     <li><a href="Treatment.html">Treatments &nbsp;</a></li>
-    <li><a href="Types.hmtl">Types &nbsp;</a><li>
     <li><a href=""></a><li>
         </ul class=navlinks>
     
@@ -34,7 +33,7 @@
 
 
 
-<h1 style="color:rgb(189, 7, 7);">Mental health Problems Affect Everyone</h1>
+<h1 style="color:rgb(189, 7, 7);">Mental Health Problems Affect Everyone</h1>
 
 <p style="font-size:140%;">Myth:Mental Health problems dont affect me.</p>
 
