--- a/navigation.html
+++ b/navigation.html
@@ -9,15 +9,17 @@
 </head>
 <body> Our Mental Health
     <h1>Depression</h1> 
-    <a href="Depression.html">Depression</a>
-    <a href="Symptoms.html">Symptoms</a>
-    <a href="Mental_Health.html">Mental Health
-        <a href="Contact.html">Contact</a>
-        <a href="Mental_Disorders.html">Mental Disorders</a>
-        <a href="Psychotherapies.html">Psychotherapies</a>
-        <a href="Treatments.html">Treatments
-            <a href="Types.hmtl">Types</a>
-            <a href=""></a>
+    <li><a href="Mental_Health.html">Our Mental Health &nbsp;</a><li></li>
+
+    <li><a href="Depression.html">Depression &nbsp;</a></li>
+
+    <li><a href="Symptoms.html">Symptoms &nbsp;</a><li>
+
+     <li><a href="Treatment.html">Treatments &nbsp;</a></li>
+
+     <li> <a href="Psychotherapies.html">Psychotherapies &nbsp;</a><li>
+     
+     <li> <a href="Contact.html">Contact &nbsp;</a><li></li>
         </a>
     </a>
 </body> 
