--- a/Depression.html
+++ b/Depression.html
@@ -10,20 +10,27 @@
 </head>
 
 <body>
-    <a href="Depression.html">Depression</a>
-    <a href="Symptoms.html">Symptoms</a>
-    <a href="Mental_Health.html">Mental Health</a>
-        <a href="Contact.html">Contact</a>
-        <a href="Mental_Disorders.html">Mental Disorders</a>
-        <a href="Psychotherapies.html">Psychotherapies</a>
-        <a href="Treatment.html">Treatments</a>
-            <a href="Types.hmtl">Types</a>
+    <ul class="navlinks">
+    <li><a href="Mental_Health.html">Our Mental Health &nbsp;</a><li></li>
+
+    <li><a href="Depression.html">Depression &nbsp;</a></li>
+
+    <li><a href="Symptoms.html">Symptoms &nbsp;</a><li>
+
+     <li><a href="Treatment.html">Treatments &nbsp;</a></li>
+
+     <li> <a href="Psychotherapies.html">Psychotherapies &nbsp;</a><li>
+     
+     <li> <a href="Contact.html">Contact &nbsp;</a><li></li>
+<li><a href=""></a><li>
+</ul>
     <h1 style="color:rgb(2, 1, 1);">Depression </h1>
     <p style="font-size:130%;">Depression is more than just feeling sad.It drains your optisim,energy and drive. It can seem like there's no way out,but no matter how bad you feel there's always hope.Read on to learn about symptoms,treatment,and recovery. </p>
 </body>
+<img src="https://images.theconversation.com/files/293702/original/file-20190924-54775-1a5nssg.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=675.0&fit=crop" width="300px" style= "float:right;">
 <p style="font-size:130%;">Depression affetcs an estimated one in 15 adults (6.7%) in any given year.And one in six people (16.6%) will experience depression at some time in their life. Depression can occur at any, time but on average, first appears during the late teens to mid-20s. Women are more likely than men to experience depression. Some studies show that one-third of women will experience a major depressive episode in their lifetime. There is a high degree of heritability (approximately 40%) when first-degree relatives (parents/children/siblings) have depression.</p>
 
-<h1 style="color:rgb(7, 34, 189);">Depression is Different From Sadness or Grief/Bereavement</h1>
+<h1 style="color:rgb(2, 1, 1);">Depression is Different From Sadness or Grief/Bereavement</h1>
 
 <body>
 <p style="font-size:130%;">The death of loved ones, loss of a job or the ending of a relationship are difficult experiences for a person to endure. It is normal for fellings of sadness or grief to develop in response to such situations.Those experiencing loss often might describe themselves as being "depressed"</p>   
@@ -32,6 +39,7 @@
 <li style="font-size:130%;">In grief, thoughts of death may surface when thinking of or fantasizing about "joining" the deceased loved one. In major depression,thoughts are focused on ending one's life due to feeling worthless or undeserving of living or being unable to cope with the pain of depression.</li>
 <li style="font-size:130%;">In grief,painful waves, often intermixed with positive memories of the deceased.In major depression, mood and/or interest (pleasure) are decreased for most of two weeks.</li>
 <li style="font-size:130%;">In grief, self-esteem is usually maintained. In major depression, feelings of worthless and self-loathing are common.</li>
+<hr>
 
 <p style="font-size:130%;">Grief and depression can co-exist for some people,the death of a loved one,losing a job or being a victim of a physical assault or a major disaster can lead to depression. When grief and depression co-occur,the grief is more severe and lasts longer than grief without depression.</p>
 
