--- a/Psychotherapies.html
+++ b/Psychotherapies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,20 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><Psychotherapies</hi></Psychotherapies></h1>
-</body>
+    <h1>Psychotherapies</h1>
+    <ul class="navlinks">
+        <li><a href="Mental_Health.html">Our Mental Health &nbsp;</a><li></li>
+
+        <li><a href="Depression.html">Depression &nbsp;</a></li>
+
+        <li><a href="Symptoms.html">Symptoms &nbsp;</a><li>
+
+         <li><a href="Treatment.html">Treatments &nbsp;</a></li>
+
+         <li> <a href="Psychotherapies.html">Psychotherapies &nbsp;</a><li>
+         
+         <li> <a href="Contact.html">Contact &nbsp;</a><li></li>
+         <li><a href=""></a><li>
+    </ul>
+         
 <p style="font-size:130%;">Psychotherapy is a general term for treating mental health problems by talking with a pychiatrist,psychologist or other mental health provider. During psychotherapy, you learn
 about your condition and your moods, feelings,thoughts and behaviors.Psycotherapy helps you learn how to take control of your life and respond to challenging situations with healthy coping skills.
-There are many types of psychotherapy, each with its own approach. The type of psychotherapy that;s right for you depends on your individual situation. Psychotherapy is also known as talk therapy,couseling, psychosocial therapy or simply therap.</p>
-</html>
-
-<head></head>
+There are many types of psychotherapy, each with its own approach. The type of psychotherapy that;s right for you depends on your individual situation. Psychotherapy is also known as talk therapy,couseling, psychosocial therapy or simply therapy.</p>
 <p style="font-size:150%; text-decoration: underline;">Why is it Important to Do?</p>
 
-<body>
 <p style="font-size:130%;">Psychotherapy can be helpful in treating most mental health problems, including:</p>
 <li style="font-size:130%;">Anxiety Disorders, such as obsessive-compulsive disorder(OCD), phobias, panic disorder or post-traumatic stress disorder(PTSD)</li>
 <li style="font-size:130%;">Mood disorders, such as depression or bipolar disorder</li>
 <li style="font-size:130%;">Addictions,such as alcholism, drug dependence or compulsive gambling</li>
 <li style="font-size:130%;">Eating Disorders,such as anorexia or bulimia</li>
 <li style="font-size:130%;">Schizophrenia or other disorders that cause detachment from reality (psychotic disorders)</li>
+</body>
+</html>
